update file 4_price_corr

--- a/src/analysis/4_Price_Corr.ipynb
+++ b/src/analysis/4_Price_Corr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
        "[1201482 rows x 14 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8477,7 +8477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -8538,7 +8538,7 @@
        "Number of trades          1.000000"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8563,7 +8563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -17326,7 +17326,7 @@
         }
        ],
        "layout": {
-        "height": 800,
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -18178,7 +18178,7 @@
     "# recoloring is necessary otherwise lines from fig und fig2 would share each color\n",
     "# e.g. Linear-, Log- = blue; Linear+, Log+ = red... we don't want this\n",
     "subfig.for_each_trace(lambda t: t.update(line=dict(color=t.marker.color)))\n",
-    "subfig.update_layout(height=800)\n",
+    "subfig.update_layout(height=600)\n",
     "subfig.show()"
    ]
   },
@@ -18207,7 +18207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18216,7 +18216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -18233,7 +18233,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18251,7 +18251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18266,7 +18266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18280,150 +18280,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>RUNEBNB</td>\n",
+       "      <td>TFUELBTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RUNEBNB</td>\n",
+       "      <td>XLMBTC</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>BUSDUSDT</td>\n",
+       "      <td>MATICBNB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>TFUELBTC</td>\n",
+       "      <td>XMRBNB</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>RUNEBNB</td>\n",
+       "      <td>XLMETH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>TFUELUSDT</td>\n",
+       "      <td>XLMTRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>PORTOUSDT</td>\n",
+       "      <td>SANTOSTRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>110</th>\n",
+       "      <td>PORTOBUSD</td>\n",
+       "      <td>SANTOSTRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>BETHBUSD</td>\n",
+       "      <td>ETHTRY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>112</th>\n",
+       "      <td>BTCTRY</td>\n",
+       "      <td>WBTCBUSD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>90 rows × 2 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "(115,\n",
-       " [array(['RUNEBNB TFUELBTC', '-0.9614654162500887'], dtype='<U32'),\n",
-       "  array(['RUNEBNB XLMBTC', '-0.9610995141412478'], dtype='<U32'),\n",
-       "  array(['BUSDUSDT MATICBNB', '-0.9594465345665986'], dtype='<U32'),\n",
-       "  array(['TFUELBTC XMRBNB', '-0.9594032674993581'], dtype='<U32'),\n",
-       "  array(['RUNEBNB XLMETH', '-0.9555043076388604'], dtype='<U32'),\n",
-       "  array(['HBARBTC RUNEBNB', '-0.953430104926986'], dtype='<U32'),\n",
-       "  array(['ETCETH XMRBNB', '-0.952206825285223'], dtype='<U32'),\n",
-       "  array(['ETCBTC XMRBNB', '-0.9517356889522204'], dtype='<U32'),\n",
-       "  array(['ETCETH RUNEBNB', '-0.9516336112746239'], dtype='<U32'),\n",
-       "  array(['CHZEUR FLOWUSDT', '0.9500952564600174'], dtype='<U32'),\n",
-       "  array(['PORTOEUR SANTOSUSDT', '0.9501128334384525'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZEUR', '0.9501140997102067'], dtype='<U32'),\n",
-       "  array(['STORJBTC TFUELBUSD', '0.950185389728831'], dtype='<U32'),\n",
-       "  array(['CHZTRY PORTOBUSD', '0.9502345671593191'], dtype='<U32'),\n",
-       "  array(['LAZIOTRY SANTOSBUSD', '0.9503583640119192'], dtype='<U32'),\n",
-       "  array(['STORJBTC TFUELUSDT', '0.950371746803773'], dtype='<U32'),\n",
-       "  array(['ALGOETH ETCBTC', '0.9504084578358121'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZBUSD', '0.9504683668579643'], dtype='<U32'),\n",
-       "  array(['1INCHBUSD XLMTRY', '0.9504879886900645'], dtype='<U32'),\n",
-       "  array(['LAZIOTRY SANTOSUSDT', '0.9505547874464562'], dtype='<U32'),\n",
-       "  array(['CHZUSDT FLOWBUSD', '0.9505556927648013'], dtype='<U32'),\n",
-       "  array(['LAZIOBUSD SANTOSUSDT', '0.950579576773047'], dtype='<U32'),\n",
-       "  array(['CHZTRY PORTOUSDT', '0.950663373201831'], dtype='<U32'),\n",
-       "  array(['LAZIOUSDT SANTOSBUSD', '0.9506873052256659'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZUSDT', '0.9506955378610091'], dtype='<U32'),\n",
-       "  array(['1INCHUSDT XLMTRY', '0.9508610055353501'], dtype='<U32'),\n",
-       "  array(['1INCHBUSD TFUELUSDT', '0.9508828253738159'], dtype='<U32'),\n",
-       "  array(['LAZIOBUSD SANTOSTRY', '0.9509872612841206'], dtype='<U32'),\n",
-       "  array(['ALGOETH IOTABTC', '0.9511630557828195'], dtype='<U32'),\n",
-       "  array(['LAZIOBUSD PORTOTRY', '0.9513249321958835'], dtype='<U32'),\n",
-       "  array(['LAZIOUSDT SANTOSTRY', '0.9513859289002794'], dtype='<U32'),\n",
-       "  array(['CHZBUSD FLOWUSDT', '0.9515227603493593'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZGBP', '0.9516179662146269'], dtype='<U32'),\n",
-       "  array(['ALGOETH ANKRBTC', '0.9518185096811247'], dtype='<U32'),\n",
-       "  array(['LAZIOUSDT PORTOTRY', '0.951909572401541'], dtype='<U32'),\n",
-       "  array(['HNTBUSD THETABTC', '0.951936481534628'], dtype='<U32'),\n",
-       "  array(['1INCHUSDT TFUELBUSD', '0.952128780006257'], dtype='<U32'),\n",
-       "  array(['BNBETH BUSDUSDT', '0.9524275301715758'], dtype='<U32'),\n",
-       "  array(['CHZBRL PORTOTRY', '0.952488172770433'], dtype='<U32'),\n",
-       "  array(['TFUELUSDT THETABUSD', '0.9527361851480136'], dtype='<U32'),\n",
-       "  array(['TFUELBUSD THETAUSDT', '0.9527548456209922'], dtype='<U32'),\n",
-       "  array(['CHZGBP FLOWBUSD', '0.9528432828784135'], dtype='<U32'),\n",
-       "  array(['CHZBRL FLOWBTC', '0.9529659393419172'], dtype='<U32'),\n",
-       "  array(['ANKRBUSD TFUELUSDT', '0.9530367755822103'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR SANTOSBUSD', '0.9537062859553171'], dtype='<U32'),\n",
-       "  array(['ALGOETH CHZBTC', '0.9539428427378344'], dtype='<U32'),\n",
-       "  array(['CHZGBP FLOWUSDT', '0.953975905366071'], dtype='<U32'),\n",
-       "  array(['BNBBTC ETCETH', '0.9539912412822886'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR SANTOSUSDT', '0.9542892212043591'], dtype='<U32'),\n",
-       "  array(['ALGOTRY MKRBUSD', '0.9543688729103006'], dtype='<U32'),\n",
-       "  array(['LAZIOBUSD PORTOUSDT', '0.9545848800861861'], dtype='<U32'),\n",
-       "  array(['ALGOUSDT MKRBUSD', '0.9547262705507668'], dtype='<U32'),\n",
-       "  array(['ANKRUSDT TFUELBUSD', '0.9548514504624045'], dtype='<U32'),\n",
-       "  array(['ALGOBUSD MKRUSDT', '0.9548584648700924'], dtype='<U32'),\n",
-       "  array(['CHZEUR FLOWBTC', '0.954970482497397'], dtype='<U32'),\n",
-       "  array(['LAZIOBTC PORTOTRY', '0.9549774819745496'], dtype='<U32'),\n",
-       "  array(['TFUELBUSD XLMEUR', '0.954979054670028'], dtype='<U32'),\n",
-       "  array(['PORTOEUR SANTOSTRY', '0.9551441036782614'], dtype='<U32'),\n",
-       "  array(['LAZIOUSDT PORTOBUSD', '0.9552059795187104'], dtype='<U32'),\n",
-       "  array(['ANKRBUSD ETCTRY', '0.955240390065119'], dtype='<U32'),\n",
-       "  array(['ALGOTRY MKRUSDT', '0.9554841363725842'], dtype='<U32'),\n",
-       "  array(['1INCHBTC ALGOETH', '0.9555075289654889'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZTRY', '0.9557030029552815'], dtype='<U32'),\n",
-       "  array(['1INCHBUSD LDOBTC', '0.9557372397465816'], dtype='<U32'),\n",
-       "  array(['ANKRUSDT ETCTRY', '0.955898645693855'], dtype='<U32'),\n",
-       "  array(['TFUELUSDT XLMEUR', '0.9560344181718128'], dtype='<U32'),\n",
-       "  array(['MATICUSDT OPBUSD', '0.956340110960744'], dtype='<U32'),\n",
-       "  array(['JUVUSDT PSGBUSD', '0.9564317292871256'], dtype='<U32'),\n",
-       "  array(['MATICBUSD OPUSDT', '0.9565451258561283'], dtype='<U32'),\n",
-       "  array(['PORTOUSDT SANTOSBTC', '0.9566683458516988'], dtype='<U32'),\n",
-       "  array(['PORTOBUSD SANTOSBTC', '0.9567157990782784'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHEUR', '0.9567235060986387'], dtype='<U32'),\n",
-       "  array(['1INCHUSDT LDOBTC', '0.9571489368356781'], dtype='<U32'),\n",
-       "  array(['ETCBTC TFUELBUSD', '0.9573446345332463'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR SANTOSTRY', '0.9575112918069197'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHBIDR', '0.9575580285385249'], dtype='<U32'),\n",
-       "  array(['TFUELBTC THETAETH', '0.9585350292667244'], dtype='<U32'),\n",
-       "  array(['MATICRUB OPUSDT', '0.9585942813449059'], dtype='<U32'),\n",
-       "  array(['ETCBTC TFUELUSDT', '0.9588006122893621'], dtype='<U32'),\n",
-       "  array(['MATICRUB OPBUSD', '0.9588189632954456'], dtype='<U32'),\n",
-       "  array(['LAZIOTRY PORTOUSDT', '0.95886187704028'], dtype='<U32'),\n",
-       "  array(['LAZIOTRY PORTOBUSD', '0.9590355123864918'], dtype='<U32'),\n",
-       "  array(['ADABTC CHZBRL', '0.9595144586762727'], dtype='<U32'),\n",
-       "  array(['ANKRTRY TFUELUSDT', '0.9601151392996279'], dtype='<U32'),\n",
-       "  array(['ANKRTRY TFUELBUSD', '0.9603875713921955'], dtype='<U32'),\n",
-       "  array(['THETAETH XLMBTC', '0.9605196271229088'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHDAI', '0.9610834616066448'], dtype='<U32'),\n",
-       "  array(['BUSDBIDR USDTIDRT', '0.9612642462785943'], dtype='<U32'),\n",
-       "  array(['CHZGBP FLOWBTC', '0.962424379010877'], dtype='<U32'),\n",
-       "  array(['PORTOTRY SANTOSBTC', '0.9626619905164191'], dtype='<U32'),\n",
-       "  array(['ALGOETH TFUELBTC', '0.9629975680095033'], dtype='<U32'),\n",
-       "  array(['HNTBUSD XLMBTC', '0.9633969282497261'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR PORTOTRY', '0.9650873693773133'], dtype='<U32'),\n",
-       "  array(['HNTBUSD TFUELBTC', '0.9652859643618771'], dtype='<U32'),\n",
-       "  array(['ALGOETH XLMBTC', '0.9658551448875513'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR PORTOUSDT', '0.9659742271583872'], dtype='<U32'),\n",
-       "  array(['LAZIOEUR PORTOBUSD', '0.9660016434351998'], dtype='<U32'),\n",
-       "  array(['1INCHBTC HNTBUSD', '0.967048564924264'], dtype='<U32'),\n",
-       "  array(['PORTOTRY SANTOSBUSD', '0.9679664175028382'], dtype='<U32'),\n",
-       "  array(['PORTOTRY SANTOSUSDT', '0.9684545997449663'], dtype='<U32'),\n",
-       "  array(['TFUELUSDT XLMBUSD', '0.9688424480294313'], dtype='<U32'),\n",
-       "  array(['TFUELBUSD XLMUSDT', '0.9695813451267249'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHAUD', '0.9700463936705579'], dtype='<U32'),\n",
-       "  array(['1INCHBUSD ALGOBTC', '0.9702797573323675'], dtype='<U32'),\n",
-       "  array(['1INCHUSDT ALGOBTC', '0.9707486225017115'], dtype='<U32'),\n",
-       "  array(['PORTOUSDT SANTOSBUSD', '0.9715340944946259'], dtype='<U32'),\n",
-       "  array(['PORTOBUSD SANTOSUSDT', '0.9720608995202703'], dtype='<U32'),\n",
-       "  array(['TFUELBUSD XLMTRY', '0.972468407440621'], dtype='<U32'),\n",
-       "  array(['TFUELUSDT XLMTRY', '0.9727118450740911'], dtype='<U32'),\n",
-       "  array(['PORTOUSDT SANTOSTRY', '0.9751580005377415'], dtype='<U32'),\n",
-       "  array(['PORTOBUSD SANTOSTRY', '0.9752525962142049'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHTRY', '0.9825535043680983'], dtype='<U32'),\n",
-       "  array(['BTCTRY WBTCBUSD', '0.9836609333324103'], dtype='<U32'),\n",
-       "  array(['BETHBUSD ETHUSDT', '0.9862283616998704'], dtype='<U32'),\n",
-       "  array(['BTCUSDT WBTCBUSD', '0.9901109419999654'], dtype='<U32')])"
+       "             0          1\n",
+       "0      RUNEBNB   TFUELBTC\n",
+       "1      RUNEBNB     XLMBTC\n",
+       "2     BUSDUSDT   MATICBNB\n",
+       "3     TFUELBTC     XMRBNB\n",
+       "4      RUNEBNB     XLMETH\n",
+       "..         ...        ...\n",
+       "108  TFUELUSDT     XLMTRY\n",
+       "109  PORTOUSDT  SANTOSTRY\n",
+       "110  PORTOBUSD  SANTOSTRY\n",
+       "111   BETHBUSD     ETHTRY\n",
+       "112     BTCTRY   WBTCBUSD\n",
+       "\n",
+       "[90 rows x 2 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(new_top),new_top"
+    "pair =  pd.DataFrame(numpy.array(new_top)[:,0])[0].str.split(' ',expand = True)\n",
+    "stable_coin = ['USDT','USDC','BUSD','DAI','USDP','TUSD','FEI','EDGT','OUSD','MUSD','USDS']\n",
+    "pair[~(numpy.any([pair[0].str.contains(i) for i in stable_coin],axis=0) & numpy.any([pair[1].str.contains(i) for i in stable_coin],axis=0))]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Have 115 pairs, but most of them are have `stable coin` in each pair, so that seem make no sense that symbols affect each other"
+    "> Have 90 pairs, in over $1000^2$ pair so that seem make no sense that symbols affect each other"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -18437,11 +18422,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
