CRY-38 | Feature affected almost to Open Price

--- a/src/obtain/get_symbols.ipynb
+++ b/src/obtain/get_symbols.ipynb
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-01-09T16:56:52.311875Z",
@@ -131,19 +131,7 @@
      "shell.execute_reply": "2023-01-09T16:56:52.318917Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'data'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\btn\\Coding\\CryptoPrediction\\src\\obtain\\get_symbols.ipynb Cell 6\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/btn/Coding/CryptoPrediction/src/obtain/get_symbols.ipynb#W5sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m symbols \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mmap\u001b[39m(get_symbol_attr, raw_symbols[\u001b[39m'\u001b[39;49m\u001b[39mdata\u001b[39;49m\u001b[39m'\u001b[39;49m]))\n",
-      "\u001b[1;31mKeyError\u001b[0m: 'data'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "symbols = list(map(get_symbol_attr, raw_symbols['data']))"
    ]
@@ -197,11 +185,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "37b8237ea820e88a1d26491c00c98f736c11fa9ce045cd1f80b04c4e807e90c1"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
