--- a/src/obtain/get_newest_price.ipynb
+++ b/src/obtain/get_newest_price.ipynb
@@ -5,17 +5,17 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:58.457710Z",
-     "iopub.status.busy": "2023-01-10T05:47:58.457493Z",
-     "iopub.status.idle": "2023-01-10T05:47:58.882675Z",
-     "shell.execute_reply": "2023-01-10T05:47:58.882240Z"
+     "iopub.execute_input": "2023-01-11T18:47:27.008341Z",
+     "iopub.status.busy": "2023-01-11T18:47:27.006800Z",
+     "iopub.status.idle": "2023-01-11T18:47:28.545516Z",
+     "shell.execute_reply": "2023-01-11T18:47:28.536517Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
      "execution_count": 1,
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:58.912637Z",
-     "iopub.status.busy": "2023-01-10T05:47:58.912370Z",
-     "iopub.status.idle": "2023-01-10T05:47:58.915204Z",
-     "shell.execute_reply": "2023-01-10T05:47:58.914811Z"
+     "iopub.execute_input": "2023-01-11T18:47:28.659966Z",
+     "iopub.status.busy": "2023-01-11T18:47:28.659285Z",
+     "iopub.status.idle": "2023-01-11T18:47:28.666356Z",
+     "shell.execute_reply": "2023-01-11T18:47:28.665094Z"
     }
    },
    "outputs": [],
@@ -68,10 +68,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:58.917239Z",
-     "iopub.status.busy": "2023-01-10T05:47:58.917077Z",
-     "iopub.status.idle": "2023-01-10T05:47:59.114106Z",
-     "shell.execute_reply": "2023-01-10T05:47:59.113754Z"
+     "iopub.execute_input": "2023-01-11T18:47:28.679434Z",
+     "iopub.status.busy": "2023-01-11T18:47:28.678908Z",
+     "iopub.status.idle": "2023-01-11T18:47:29.318982Z",
+     "shell.execute_reply": "2023-01-11T18:47:29.314250Z"
     }
    },
    "outputs": [
@@ -195,78 +195,78 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172325</th>\n",
-       "      <td>1673320500000</td>\n",
-       "      <td>17190.40</td>\n",
-       "      <td>17199.00</td>\n",
-       "      <td>17182.54</td>\n",
-       "      <td>17196.23</td>\n",
-       "      <td>1299.372550</td>\n",
-       "      <td>1673321399999</td>\n",
-       "      <td>2.233834e+07</td>\n",
-       "      <td>35908</td>\n",
-       "      <td>649.753260</td>\n",
-       "      <td>1.117039e+07</td>\n",
+       "      <th>172333</th>\n",
+       "      <td>1673327700000</td>\n",
+       "      <td>17216.95</td>\n",
+       "      <td>17223.34</td>\n",
+       "      <td>17208.00</td>\n",
+       "      <td>17215.23</td>\n",
+       "      <td>1684.912670</td>\n",
+       "      <td>1673328599999</td>\n",
+       "      <td>2.900936e+07</td>\n",
+       "      <td>41384</td>\n",
+       "      <td>813.477680</td>\n",
+       "      <td>1.400594e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172326</th>\n",
-       "      <td>1673321400000</td>\n",
-       "      <td>17196.69</td>\n",
-       "      <td>17198.84</td>\n",
-       "      <td>17191.66</td>\n",
-       "      <td>17191.87</td>\n",
-       "      <td>147.367870</td>\n",
-       "      <td>1673322299999</td>\n",
-       "      <td>2.533988e+06</td>\n",
-       "      <td>4488</td>\n",
-       "      <td>63.182000</td>\n",
-       "      <td>1.086424e+06</td>\n",
+       "      <th>172334</th>\n",
+       "      <td>1673328600000</td>\n",
+       "      <td>17215.23</td>\n",
+       "      <td>17225.99</td>\n",
+       "      <td>17207.05</td>\n",
+       "      <td>17221.85</td>\n",
+       "      <td>1363.170220</td>\n",
+       "      <td>1673329499999</td>\n",
+       "      <td>2.347062e+07</td>\n",
+       "      <td>37643</td>\n",
+       "      <td>663.414030</td>\n",
+       "      <td>1.142270e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172327</th>\n",
-       "      <td>1673322300000</td>\n",
-       "      <td>17197.56</td>\n",
-       "      <td>17208.17</td>\n",
-       "      <td>17190.32</td>\n",
-       "      <td>17205.72</td>\n",
-       "      <td>1443.750390</td>\n",
-       "      <td>1673323199999</td>\n",
-       "      <td>2.483027e+07</td>\n",
-       "      <td>41474</td>\n",
-       "      <td>714.057870</td>\n",
-       "      <td>1.228088e+07</td>\n",
+       "      <th>172335</th>\n",
+       "      <td>1673329500000</td>\n",
+       "      <td>17221.85</td>\n",
+       "      <td>17228.64</td>\n",
+       "      <td>17220.54</td>\n",
+       "      <td>17227.44</td>\n",
+       "      <td>200.039760</td>\n",
+       "      <td>1673330399999</td>\n",
+       "      <td>3.445478e+06</td>\n",
+       "      <td>6599</td>\n",
+       "      <td>107.728930</td>\n",
+       "      <td>1.855552e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172328</th>\n",
-       "      <td>1673323200000</td>\n",
-       "      <td>17205.31</td>\n",
-       "      <td>17210.29</td>\n",
-       "      <td>17198.68</td>\n",
-       "      <td>17201.61</td>\n",
-       "      <td>1216.826590</td>\n",
-       "      <td>1673324099999</td>\n",
-       "      <td>2.093487e+07</td>\n",
-       "      <td>28769</td>\n",
-       "      <td>584.294810</td>\n",
-       "      <td>1.005271e+07</td>\n",
+       "      <th>172336</th>\n",
+       "      <td>1673330400000</td>\n",
+       "      <td>17228.66</td>\n",
+       "      <td>17233.50</td>\n",
+       "      <td>17214.71</td>\n",
+       "      <td>17220.39</td>\n",
+       "      <td>1300.372320</td>\n",
+       "      <td>1673331299999</td>\n",
+       "      <td>2.239504e+07</td>\n",
+       "      <td>34000</td>\n",
+       "      <td>649.863570</td>\n",
+       "      <td>1.119186e+07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172329</th>\n",
-       "      <td>1673324100000</td>\n",
-       "      <td>17204.15</td>\n",
-       "      <td>17208.16</td>\n",
-       "      <td>17201.56</td>\n",
-       "      <td>17201.96</td>\n",
-       "      <td>152.120460</td>\n",
-       "      <td>1673324999999</td>\n",
-       "      <td>2.617166e+06</td>\n",
-       "      <td>4339</td>\n",
-       "      <td>87.581520</td>\n",
-       "      <td>1.506852e+06</td>\n",
+       "      <th>172337</th>\n",
+       "      <td>1673331300000</td>\n",
+       "      <td>17220.39</td>\n",
+       "      <td>17227.99</td>\n",
+       "      <td>17218.65</td>\n",
+       "      <td>17223.21</td>\n",
+       "      <td>706.964520</td>\n",
+       "      <td>1673332199999</td>\n",
+       "      <td>1.217651e+07</td>\n",
+       "      <td>16756</td>\n",
+       "      <td>353.609410</td>\n",
+       "      <td>6.090500e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>172330 rows × 11 columns</p>\n",
+       "<p>172338 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -277,11 +277,11 @@
        "3         1517762700000     8441.29     8500.09    8370.02      8500.00   \n",
        "4         1517763600000     8500.00     8579.00    8440.01      8543.98   \n",
        "...                 ...         ...         ...        ...          ...   \n",
-       "172325    1673320500000    17190.40    17199.00   17182.54     17196.23   \n",
-       "172326    1673321400000    17196.69    17198.84   17191.66     17191.87   \n",
-       "172327    1673322300000    17197.56    17208.17   17190.32     17205.72   \n",
-       "172328    1673323200000    17205.31    17210.29   17198.68     17201.61   \n",
-       "172329    1673324100000    17204.15    17208.16   17201.56     17201.96   \n",
+       "172333    1673327700000    17216.95    17223.34   17208.00     17215.23   \n",
+       "172334    1673328600000    17215.23    17225.99   17207.05     17221.85   \n",
+       "172335    1673329500000    17221.85    17228.64   17220.54     17227.44   \n",
+       "172336    1673330400000    17228.66    17233.50   17214.71     17220.39   \n",
+       "172337    1673331300000    17220.39    17227.99   17218.65     17223.21   \n",
        "\n",
        "             Volume  Kline Close time  Quote asset volume  Number of trades  \\\n",
        "0        472.122291     1517760899999        3.986791e+06              5060   \n",
@@ -290,11 +290,11 @@
        "3        227.783558     1517763599999        1.917746e+06              3077   \n",
        "4        322.068486     1517764499999        2.743974e+06              4304   \n",
        "...             ...               ...                 ...               ...   \n",
-       "172325  1299.372550     1673321399999        2.233834e+07             35908   \n",
-       "172326   147.367870     1673322299999        2.533988e+06              4488   \n",
-       "172327  1443.750390     1673323199999        2.483027e+07             41474   \n",
-       "172328  1216.826590     1673324099999        2.093487e+07             28769   \n",
-       "172329   152.120460     1673324999999        2.617166e+06              4339   \n",
+       "172333  1684.912670     1673328599999        2.900936e+07             41384   \n",
+       "172334  1363.170220     1673329499999        2.347062e+07             37643   \n",
+       "172335   200.039760     1673330399999        3.445478e+06              6599   \n",
+       "172336  1300.372320     1673331299999        2.239504e+07             34000   \n",
+       "172337   706.964520     1673332199999        1.217651e+07             16756   \n",
        "\n",
        "        Taker buy base asset volume  Taker buy quote asset volume  \n",
        "0                        215.227104                  1.818350e+06  \n",
@@ -303,13 +303,13 @@
        "3                        137.355614                  1.156986e+06  \n",
        "4                        189.538814                  1.615451e+06  \n",
        "...                             ...                           ...  \n",
-       "172325                   649.753260                  1.117039e+07  \n",
-       "172326                    63.182000                  1.086424e+06  \n",
-       "172327                   714.057870                  1.228088e+07  \n",
-       "172328                   584.294810                  1.005271e+07  \n",
-       "172329                    87.581520                  1.506852e+06  \n",
+       "172333                   813.477680                  1.400594e+07  \n",
+       "172334                   663.414030                  1.142270e+07  \n",
+       "172335                   107.728930                  1.855552e+06  \n",
+       "172336                   649.863570                  1.119186e+07  \n",
+       "172337                   353.609410                  6.090500e+06  \n",
        "\n",
-       "[172330 rows x 11 columns]"
+       "[172338 rows x 11 columns]"
       ]
      },
      "execution_count": 3,
@@ -334,10 +334,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:59.116061Z",
-     "iopub.status.busy": "2023-01-10T05:47:59.115909Z",
-     "iopub.status.idle": "2023-01-10T05:47:59.118412Z",
-     "shell.execute_reply": "2023-01-10T05:47:59.118106Z"
+     "iopub.execute_input": "2023-01-11T18:47:29.337147Z",
+     "iopub.status.busy": "2023-01-11T18:47:29.332071Z",
+     "iopub.status.idle": "2023-01-11T18:47:29.346405Z",
+     "shell.execute_reply": "2023-01-11T18:47:29.345079Z"
     }
    },
    "outputs": [],
@@ -352,10 +352,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:59.120358Z",
-     "iopub.status.busy": "2023-01-10T05:47:59.120183Z",
-     "iopub.status.idle": "2023-01-10T05:47:59.527734Z",
-     "shell.execute_reply": "2023-01-10T05:47:59.527298Z"
+     "iopub.execute_input": "2023-01-11T18:47:29.353475Z",
+     "iopub.status.busy": "2023-01-11T18:47:29.352071Z",
+     "iopub.status.idle": "2023-01-11T18:47:29.713843Z",
+     "shell.execute_reply": "2023-01-11T18:47:29.712447Z"
     }
    },
    "outputs": [],
@@ -382,10 +382,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2023-01-10T05:47:59.530244Z",
-     "iopub.status.busy": "2023-01-10T05:47:59.530070Z",
-     "iopub.status.idle": "2023-01-10T05:48:00.448102Z",
-     "shell.execute_reply": "2023-01-10T05:48:00.447506Z"
+     "iopub.execute_input": "2023-01-11T18:47:29.725119Z",
+     "iopub.status.busy": "2023-01-11T18:47:29.720988Z",
+     "iopub.status.idle": "2023-01-11T18:47:32.477023Z",
+     "shell.execute_reply": "2023-01-11T18:47:32.475687Z"
     }
    },
    "outputs": [],
@@ -412,7 +412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
