--- a/src/model/predict_price.ipynb
+++ b/src/model/predict_price.ipynb
@@ -16513,49 +16513,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3a474ee4-27b1-41f9-9d56-5b7323fe943c",
-   "metadata": {},
-   "source": [
-    "### 📌 Using open price as feature and target as well"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "f5bdc52a",
-   "metadata": {},
-   "source": [
-    "> Still only use Open Price because there are some models that can't run multivariate 👍 <strong>Model only uses univariate</strong>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "fb7dfd5d-9484-487d-88a5-bdb5aa620c43",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[17159.9 ],\n",
-       "       [17151.32],\n",
-       "       [17162.71],\n",
-       "       [17150.86],\n",
-       "       [17157.21]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset = pd_df.filter([\"Open price\"]).values\n",
-    "dataset[:5]"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "a322614b",
@@ -16630,12 +16587,54 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "c5b98129",
+   "id": "7b94dd5c",
    "metadata": {},
    "source": [
     "#### ✅ As we can see, <strong>High Price</strong> feature is the most influence on <strong>Open Price</strong>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f5bdc52a",
+   "metadata": {},
+   "source": [
+    "> Still only use Open Price because there are some models that can't run multivariate 👍 <strong>Model only uses univariate</strong>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a474ee4-27b1-41f9-9d56-5b7323fe943c",
+   "metadata": {},
+   "source": [
+    "### 📌 Using open price as feature and target as well"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fb7dfd5d-9484-487d-88a5-bdb5aa620c43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[17159.9 ],\n",
+       "       [17151.32],\n",
+       "       [17162.71],\n",
+       "       [17150.86],\n",
+       "       [17157.21]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = pd_df.filter([\"Open price\"]).values\n",
+    "dataset[:5]"
    ]
   },
   {
@@ -63377,7 +63376,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('NaDS')",
    "language": "python",
    "name": "python3"
   },
@@ -63391,11 +63390,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "479fcfcd8a781549d023ec8ee70cfd9d1bc4e10e5bc48a6e6de9df19fe23d55c"
    }
   }
  },
