HOT FIX | Fix pronunciation

--- a/src/analysis/3_Most_Trading.ipynb
+++ b/src/analysis/3_Most_Trading.ipynb
@@ -1474,13 +1474,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### <center>📜 Question 2: Is the quotation correct according to the value of the tokens ? </center>\n",
     "\n",
     "#### Benefits of finding the answer:\n",
-    "- After this we can know should we should trading manny time in this market\n",
+    "- After this we can know should we should trading many time in this market\n",
     "- Beside that, we can verify that the price of the token for user is clearly \n",
     "\n",
     "#### Answer:\n",
