--- a/src/analysis/3_Most_Trading.ipynb
+++ b/src/analysis/3_Most_Trading.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -304,14 +304,14 @@
        "[1201482 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "prices = pandas.read_csv('../../datastore/processed/prices.csv')\n",
-    "prices"
+    "prices # load data"
    ]
   },
   {
@@ -334,8 +334,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# group all same symbols in to one\n",
     "g_symbol_data = prices.groupby([\"Symbol\",\"base\",\"quote\"]).count()[[\"Kline open time\"]]\n",
     "g_symbol_data.reset_index(inplace=True)\n",
+    "\n",
+    "# count appear time\n",
     "quote_symbol_data = g_symbol_data.groupby(\"quote\").count()[[\"Kline open time\"]]\n",
     "base_symbol_data = g_symbol_data.groupby(\"base\").count()[[\"Kline open time\"]]"
    ]
@@ -526,6 +529,7 @@
     }
    ],
    "source": [
+    "#combie them and get the total time appear in quote and base\n",
     "merge_data = base_symbol_data.merge(quote_symbol_data, left_index=True, right_index=True, how='outer').fillna(0).astype(int)\n",
     "merge_data[\"Total\"] = merge_data[\"Kline open time_x\"] + merge_data[\"Kline open time_y\"]\n",
     "merge_data = merge_data.sort_values(by=\"Total\", ascending=False).head(20)\n",
@@ -1499,6 +1503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get the data the have stabel_coin in quote or base\n",
     "stable_coin  = ['USDT','BUSD']\n",
     "only_stable = prices[prices.base.isin(stable_coin) | prices.quote.isin(stable_coin)][['base','quote','Kline open time','Open price','High price','Low price','Close price']].set_index('Kline open time')"
    ]
@@ -1509,9 +1514,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# reverse quote and base if the quote is not in stable_coin\n",
     "temp = only_stable[~only_stable.quote.isin(stable_coin)]\n",
     "only_stable[~only_stable.quote.isin(stable_coin)] = pandas.concat(\n",
-    "    [temp[['quote','base']],1/temp[['Open price','High price','Low price','Close price']]],\n",
+    "    [temp[['quote','base']],1/temp[['Open price','High price','Low price','Close price']]], # calculate the new prices\n",
     "    axis=1\n",
     ")"
    ]
@@ -1718,6 +1724,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#get the unique symbols has in data and transform price to a new shape that symbols and Kline open time is the index (multindex)\n",
     "symbols_unique = numpy.unique(prices[['Symbol','base','quote']].to_numpy(dtype='str'),axis=0)\n",
     "price_table = prices.set_index(['Symbol','Kline open time'])"
    ]
@@ -1749,13 +1756,16 @@
     }
    ],
    "source": [
+    "#try to calcuate the ratio between given and we got\n",
     "n = len(symbols_unique)\n",
     "print('total: ',n)\n",
     "diff = []\n",
     "for i in symbols_unique:\n",
     "    if n%100 == 0:\n",
     "        print(n)\n",
+    "    # calculate by stable_coin\n",
     "    cal = only_stable[only_stable.base == i[1]][['Open price','High price','Low price','Close price']]/only_stable[only_stable.base == i[2]][['Open price','High price','Low price','Close price']]\n",
+    "    #ratio\n",
     "    gap = price_table.loc[i[0]][['Open price','High price','Low price','Close price']]/cal\n",
     "    diff += [ numpy.mean(gap,axis=0)]\n",
     "    n-=1\n",
@@ -1905,6 +1915,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#reshape the prices table to a suitable form\n",
     "symbols_price = prices.set_index(['Symbol','Kline open time'])[['High price','Low price']]"
    ]
   },
@@ -1938,6 +1949,11 @@
     "period = []\n",
     "n = len(symbols_unique)\n",
     "print('total: ',n)\n",
+    "\n",
+    "#get the compare price for every single opentime with the previous one, then calculate how long it continue the trend\n",
+    "# = 0 : the trend is continue\n",
+    "# > 0 : the trend is up\n",
+    "# < 0 : the trend is down\n",
     "for i in symbols_unique[:,0]:\n",
     "    if n%100 == 0:\n",
     "        print(n)\n",
@@ -2147,11 +2163,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Nov 14 2022, 16:10:14) [GCC 11.3.0]"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "a975ed8b98c08beba37d949353546e85fb5250a2bdceb316b7e036ee961162de"
    }
   }
  },
