--- a/src/analysis/4_Price_Corr.ipynb
+++ b/src/analysis/4_Price_Corr.ipynb
@@ -310,7 +310,7 @@
    ],
    "source": [
     "price_df = pd.read_csv(\"../../datastore/processed/prices.csv\")\n",
-    "price_df"
+    "price_df # read data"
    ]
   },
   {
@@ -406,6 +406,7 @@
     }
    ],
    "source": [
+    "#calculate the corr of prices\n",
     "price_only_df = price_df[[\"Open price\", \"High price\", \"Low price\", \"Close price\"]]\n",
     "corr = price_only_df.corr()\n",
     "corr"
@@ -426,8 +427,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get one symbol to plot, have to transform the index to suitable for graph\n",
     "price_and_time_df = price_df.loc[price_df[\"Symbol\"] == \"BTCUSDT\"].set_index(\"Kline open time\")[[\"Open price\", \"High price\", \"Low price\", \"Close price\"]]\n",
-    "price_and_time_df.index = pd.to_datetime(price_and_time_df.index)\n",
+    "price_and_time_df.index = pd.to_datetime(price_and_time_df.index) # change the datetime format\n",
     "price_and_time_df.sort_index(inplace=True)"
    ]
   },
@@ -8544,6 +8546,7 @@
     }
    ],
    "source": [
+    "# do the same with previous question, but add one more collumn\n",
     "price_df[price_df.Symbol == 'ETHBTC'][['Open price','High price','Low price','Close price','Number of trades']].corr(method='kendall')[['Number of trades']]"
    ]
   },
@@ -18170,6 +18173,7 @@
     }
    ],
    "source": [
+    "# get one symbol to plot but, and combie the graph to easy to see how they affect to each other\n",
     "fig = px.line(price_df[price_df.Symbol == 'ETHBTC'], x=price_df[price_df.Symbol == 'ETHBTC'].index, y=[\"Open price\", \"High price\", \"Low price\", \"Close price\"])\n",
     "fig2 = px.line(price_df[price_df.Symbol == 'ETHBTC'], x=price_df[price_df.Symbol == 'ETHBTC'].index, y=[\"Number of trades\"])\n",
     "fig2.update_traces(yaxis=\"y2\")\n",
@@ -18211,6 +18215,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# get only one price collumn, and reshape to a new form\n",
     "symbol_corr = price_df.pivot(index='Kline open time',columns='Symbol')['High price'].corr()"
    ]
   },
@@ -18270,6 +18275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#only take symbols pair has toal 4 different token\n",
     "symbols = price_df.drop_duplicates(subset='Symbol')[['Symbol','base','quote']]\n",
     "new_top = []\n",
     "for i in top:\n",
@@ -18392,6 +18398,7 @@
     }
    ],
    "source": [
+    "# remove the row that both have stable coin in pair\n",
     "pair =  pd.DataFrame(numpy.array(new_top)[:,0])[0].str.split(' ',expand = True)\n",
     "stable_coin = ['USDT','USDC','BUSD','DAI','USDP','TUSD','FEI','EDGT','OUSD','MUSD','USDS']\n",
     "pair[~(numpy.any([pair[0].str.contains(i) for i in stable_coin],axis=0) & numpy.any([pair[1].str.contains(i) for i in stable_coin],axis=0))]"
