--- a/src/obtain/get_all_price.ipynb
+++ b/src/obtain/get_all_price.ipynb
@@ -32,6 +32,7 @@
    },
    "outputs": [],
    "source": [
+    "# the API web address\n",
     "Exchange_Info_API = 'https://api.binance.com/api/v3/exchangeInfo'\n",
     "Price_Info_API = 'https://api.binance.com/api/v3/klines'"
    ]
@@ -49,6 +50,7 @@
    },
    "outputs": [],
    "source": [
+    "#get the information of all symbols that has in market\n",
     "def symbols_info():\n",
     "    data = json.loads(requests.get(Exchange_Info_API).text)\n",
     "    cols = ['symbol','status','baseAsset','quoteAsset']\n",
@@ -69,6 +71,7 @@
    },
    "outputs": [],
    "source": [
+    "# for change the date time format to unix\n",
     "def Date_to_timestamp(_time,_format = '%d/%m/%Y %H:%M:%S'):\n",
     "    return int(datetime.datetime.timestamp(datetime.datetime.strptime(_time,_format ))*1000)"
    ]
@@ -86,6 +89,7 @@
    },
    "outputs": [],
    "source": [
+    "# get the data into dataframe\n",
     "def Price_info(symbol,step='1m',start=None,end=None,limit=500, base = '',quote=''):\n",
     "\n",
     "    if start != None and type(start) == str:\n",
@@ -93,7 +97,7 @@
     "    if end != None and type(end) == str:\n",
     "        end = Date_to_timestamp(end)\n",
     "    \n",
-    "\n",
+    "    #parameter\n",
     "    par = {\n",
     "        'symbol':symbol,\n",
     "        'startTime':start,\n",
@@ -101,7 +105,7 @@
     "        'interval':step,\n",
     "        'limit':limit}\n",
     "\n",
-    "\n",
+    "    #collumns of return data\n",
     "    cols =[\n",
     "        'Kline open time',   #if a range of time\n",
     "        'Open price',       #First trade price in the time range\n",
@@ -115,6 +119,8 @@
     "        'Taker buy base asset volume',  #Sum in time\n",
     "        'Taker buy quote asset volume', #Sum in time\n",
     "        'Unused field, ignore'] # not use \n",
+    "\n",
+    "    # reformat the jSOn to the datafram and add some meanfull column\n",
     "    p=pandas.DataFrame(json.loads(requests.get(Price_Info_API,params=par).text),columns=cols)\n",
     "    p.insert(0,'quote', quote)\n",
     "    p.insert(0,'base', base)\n",
@@ -138,8 +144,8 @@
    },
    "outputs": [],
    "source": [
+    "#get data\n",
     "symbols = symbols_info()\n",
-    "\n",
     "data = pandas.concat(\n",
     "    [Price_info(\n",
     "        i['symbol'],\n",
@@ -167,6 +173,7 @@
    },
    "outputs": [],
    "source": [
+    "#save data\n",
     "symbols.to_csv(\"../../datastore/raw/binance_symbols.csv\", index=False)\n",
     "data.to_csv(\"../../datastore/raw/prices.csv\", index=False)"
    ]
