--- a/src/obtain/get_each_price.ipynb
+++ b/src/obtain/get_each_price.ipynb
@@ -65,6 +65,7 @@
    },
    "outputs": [],
    "source": [
+    "# API key for calling data\n",
     "BINANCE_API_KEY = os.environ.get(\"BINANCE_API_KEY\")\n",
     "BINANCE_API_SECRET = os.environ.get(\"BINANCE_API_SECRET\")\n",
     "client = Spot(key=BINANCE_API_KEY, secret=BINANCE_API_SECRET)"
@@ -97,6 +98,7 @@
    },
    "outputs": [],
    "source": [
+    "#get information of data\n",
     "exchanges = client.exchange_info()\n",
     "symbols = list(map(lambda item: item.get('symbol'), exchanges.get('symbols')))"
    ]
@@ -138,9 +140,10 @@
    },
    "outputs": [],
    "source": [
+    "#calling all data and store in muntilple csv file\n",
     "today = datetime.utcnow().replace(hour=23, minute=0, second=0, microsecond=0)\n",
     "today_timestamp = int(today.timestamp() * 1000)\n",
-    "\n",
+    "#start and end in unixtime\n",
     "start_timestamp = today_timestamp - NUM_OF_DAYS * DURATION_EACH_DAY\n",
     "end_timestamp = today_timestamp\n",
     "\n",
