--- a/src/obtain/get_newest_price.ipynb
+++ b/src/obtain/get_newest_price.ipynb
@@ -51,6 +51,7 @@
    },
    "outputs": [],
    "source": [
+    "#API key and connect\n",
     "BINANCE_API_KEY = os.environ.get(\"BINANCE_API_KEY\")\n",
     "BINANCE_API_SECRET = os.environ.get(\"BINANCE_API_SECRET\")\n",
     "client = Spot(key=BINANCE_API_KEY, secret=BINANCE_API_SECRET)"
@@ -319,7 +320,7 @@
    ],
    "source": [
     "price = pd.read_csv(f\"../../datastore/processed/{SYMBOL}_{PERIOD}.csv\")\n",
-    "price"
+    "price # read from file"
    ]
   },
   {
@@ -342,9 +343,9 @@
    },
    "outputs": [],
    "source": [
-    "start_timestamp = price.iloc[-1, 0]\n",
+    "start_timestamp = price.iloc[-1, 0] # get the lastest time has in data\n",
     "today = datetime.utcnow().replace(hour=23, minute=0, second=0, microsecond=0)\n",
-    "today_timestamp = int(today.timestamp() * 1000)"
+    "today_timestamp = int(today.timestamp() * 1000) #the current time"
    ]
   },
   {
@@ -360,6 +361,7 @@
    },
    "outputs": [],
    "source": [
+    "# get new data\n",
     "for timestamp in range(start_timestamp, today_timestamp, DURATION_EACH_DAY):\n",
     "    data = client.klines(SYMBOL, PERIOD, limit=1000, startTime=timestamp, endTime=timestamp + DURATION_EACH_DAY)\n",
     "    if start_timestamp == timestamp:\n",
