--- a/src/obtain/get_symbols.ipynb
+++ b/src/obtain/get_symbols.ipynb
@@ -45,6 +45,7 @@
    },
    "outputs": [],
    "source": [
+    "#API key\n",
     "CMK_KEY = os.environ.get(\"COIN_MARKET_CAP_KEY\")"
    ]
   },
@@ -61,6 +62,7 @@
    },
    "outputs": [],
    "source": [
+    "#collums of return data\n",
     "columns = [\n",
     "    'symbol', # abbreviation của symbol\n",
     "    'price', # giá hiện tại của symbol theo USD\n",
@@ -84,6 +86,7 @@
    },
    "outputs": [],
    "source": [
+    "#request data\n",
     "SYMBOLS_LIST_API = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/listings/latest'\n",
     "\n",
     "headers = {\n",
@@ -110,6 +113,7 @@
    },
    "outputs": [],
    "source": [
+    "# write function to easy to reuse by json format\n",
     "def get_symbol_attr(symbol):\n",
     "    symbol_name = symbol['symbol']\n",
     "    price = symbol['quote']['USD']['price']\n",
