HOTFIX | Comment get_symbols

--- a/src/obtain/get_symbols.ipynb
+++ b/src/obtain/get_symbols.ipynb
@@ -33,6 +33,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## API key"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -47,6 +54,13 @@
    "source": [
     "#API key\n",
     "CMK_KEY = os.environ.get(\"COIN_MARKET_CAP_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Declare Columns "
    ]
   },
   {
@@ -74,6 +88,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pass header and params to request"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -98,6 +119,13 @@
     "}\n",
     "\n",
     "raw_symbols = json.loads(requests.get(SYMBOLS_LIST_API, headers=headers, params=params).text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fetch symbols and decode responses"
    ]
   },
   {
@@ -154,6 +182,13 @@
    "outputs": [],
    "source": [
     "df = pandas.DataFrame(symbols, columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Store symbols"
    ]
   },
   {
